# cc-plugin-manager

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cliff.toml  dev.bat  plugins.json  pyproject.toml  run.bat
.beads/: issues.jsonl  metadata.json
.github/workflows/: ci.yml  release.yml
cc_plugin_manager/: __main__.py  cli.py  data.py  manifest_verifier.py  worker.py
cc_plugin_manager/ui/: add_plugin_dialog.py  live_region.py  log_pane.py  main_frame.py  marketplace_dialog.py  plugin_list.py
docs/: a11y-smoke-test.md
scripts/: build_exe.py  launch.py
tests/: test_cli.py  test_data.py  test_manifest_verifier.py  test_ui_smoke.py  test_worker.py
